初始化设置

--- a/common/head.html
+++ b/common/head.html
@@ -25,10 +25,10 @@
     <div class="nav"  >
       <ul>
         <li><a href="../index.html" target="_top">首页</a></li>
-        <li class="isLogin" href="personal_center.html">个人中心</li>
+        <li class="isLogin" href="/personal_center.html">个人中心</li>
         <li class="isLogin" href="house_info/list.html">房源数据库</li>
-        <li class="isLogin" href="collect/list.html">房源征集</li>
-        <li ><a href="../app_load.html" target="_top">APP下载</a></li>
+        <!--<li class="isLogin" href="collect/list.html">房源征集</li>-->
+        <!--<li ><a href="../app_load.html" target="_top">APP下载</a></li>-->
         <li ><a href="../help.html" target="_top">帮助？</a></li>
         <li ><a href="../custmer_service.html" target="_top">客服</a> </li>
         <li ><a href="../announcement.html" target="_top">公告</a> </li>
