--- a/common/head.html
+++ b/common/head.html
@@ -26,8 +26,9 @@
       <ul>
         <li><a href="../index.html" target="_top">首页</a></li>
         <li class="isLogin" href="/personal_center.html">个人中心</li>
-        <li class="isLogin" href="house_info/list.html">房源数据库</li>
-        <!--<li class="isLogin" href="collect/list.html">房源征集</li>-->
+        <li class="isLogin" href="house_valid/list.html">有效房源</li>
+        <li class="isLogin" href="house_new/list.html">最新房源</li>
+        <li class="isLogin" href="house_property/list.html">物业房源</li>
         <!--<li ><a href="../app_load.html" target="_top">APP下载</a></li>-->
         <li ><a href="../help.html" target="_top">帮助？</a></li>
         <li ><a href="../custmer_service.html" target="_top">客服</a> </li>
