--- a/common/head.html
+++ b/common/head.html
@@ -27,7 +27,7 @@
 <div class="header" style="min-width: 1300px;">
   <div class="site_topbar" style="min-width: 1300px;">
     <div class="logo">
-    <a href="../index.html" target="_top"><img src="resources/images/logo1.png"  alt=""></a>
+    <a href="../index.html" target="_top"><img src="resources/images/logo.png"  alt=""></a>
     </div>
     <div class="nav"  >
       <ul>
