--- a/house_info/list-table.html
+++ b/house_info/list-table.html
@@ -18,12 +18,8 @@
     <!--<script type="text/javascript" src="../resources/js/houseInfo/houseInfoV2.js"></script>-->
     <link href="../resources/css/date_css/date.css" rel="stylesheet" type="text/css">
 
-    <!-- DataTables CSS -->
-    <link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.7/css/jquery.dataTables.css">
-     
-     
-    <!-- DataTables -->
-    <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.7/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="../resources/dataTables/media/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../resources/dataTables/media/css/jquery.dataTables.min.css">
     <script>
         //加载用户名称
         var  uname = getCookie("yjb_username");
@@ -33,52 +29,83 @@
 //            $.delay(1000);
         }
 
-
         $(function(){
 
-
-//            getAjax("GET", {}, "houseInfoValid/auth/getHouseInfoList?" + new Date(), getCommunityCallBack, true);
-
-           function getCommunityCallBack(data){
-                alert(data)
-           }
-
+            function getQueryCondition(data) {
+                var param = {};
+                //组装排序参数
+                if (data.order&&data.order.length&&data.order[0]) {
+                    switch (data.order[0].column) {
+                        case 1:
+                            param.orderColumn = "name";
+                            break;
+                        case 2:
+                            param.orderColumn = "position";
+                            break;
+                        case 3:
+                            param.orderColumn = "status";
+                            break;
+                        case 4:
+                            param.orderColumn = "start_date";
+                            break;
+                        default:
+                            param.orderColumn = "name";
+                            break;
+                    }
+                    param.orderDir = data.order[0].dir;
+                }
+                //组装查询参数
+//                param.fuzzySearch = userManage.fuzzySearch;
+//                if (userManage.fuzzySearch) {
+//                    param.fuzzy = $("#fuzzy-search").val();
+//                }else{
+//                    param.name = $("#name-search").val();
+//                    param.position = $("#position-search").val();
+//                    param.office = $("#office-search").val();
+//                    param.extn = $("#extn-search").val();
+//                    param.status = $("#status-search").val();
+//                    param.role = $("#role-search").val();
+//                }
+                //组装分页参数
+                param.pageOffset = data.start;
+                param.pageSize = data.length;
+                return param;
+            }
             $('#houseTable').dataTable( {
+                language: {
+                    url: '/resources/dataTables/Chinese.json'
+                },
                 searching: false,
                 ordering:  false,
-                bsort:  false,
                 "processing": true,
                 "serverSide": true,
-//                "ajax": "/yjb/houseInfoValid/auth/getHouseInfoList"
+                "paging": true,
+                "aLengthMenu": [[25, 50, -1], [ 25, 50, "显示所有"]], //这个是允许用户自定义每页数量的时候,下拉菜单的选项
+                "bPaginate" : true,      //显示分页器
+                "bLengthChange": false, // 用户不可改变每页显示数量
+                "iDisplayLength":25,   //一页显示条数
                 "ajax" : {
-//                    data : function(d) {
-//                        return $.extend({}, d, {
-//                            'name' : $('#inInput').val()
-//                        })
-//                    },
+                    data : function(data) {
+                        return getQueryCondition(data)
+                    },
                     url : "/yjb/houseInfoValid/auth/getHouseInfoList",
                     type : "GET",
-                    dataSrc: function (json) {
+                    dataSrc: function (data) {
 
-                        json.draw = json.pageNumber;
-                        json.recordsTotal = json.totalCount;
-                        json.recordsFiltered = json.totalCount;
-                        json.data =json.list;
-                        console.log(JSON.stringify(json))
-                        return json;
+                        data.recordsTotal = data.totalCount;
+                        data.recordsFiltered = data.totalCount;
+                        return data.data;
                     }
-
-                }
-                ,
+                },
                 "columns": [
-                    { "data": "id" }
-//                    { "data": "createDate" },
+                    { "data": "name" },
+                    { "data": "createDate" },
 //                    { "data": "modifyDate" },
 //                    { "data": "disconTime" },
 //                    { "data": "priority" },
 //                    { "data": "name" },
 //                    { "data": "phone" },
-//                    { "data": "mobile" },
+                    { "data": "mobile" },
 //                    { "data": "community" },
 //                    { "data": "houseShape" },
 //                    { "data": "areaSize" },
@@ -108,49 +135,11 @@
 
 
 
-
-
     </script>
 </head>
 <body>
 
-<table id="houseTable">
-    <thead>
-    <tr style="background:#227ADC; color:#fff;">
-        <th>数据价格</th>
-        <!--<th>上架时间</th>-->
-        <!--<th>区域</th>-->
-        <!--<th>小区</th>-->
-        <!--<th>面积</th>-->
-        <!--<th>售价</th>-->
-        <!--<th>楼栋号</th>-->
-        <!--<th>房号</th>-->
-        <!--<th>手机</th>-->
-        <!--<th colspan="2">操作</th>-->
-        <!--<th>数据价格</th>-->
-        <!--<th>上架时间</th>-->
-        <!--<th>区域</th>-->
-        <!--<th>小区</th>-->
-        <!--<th>面积</th>-->
-        <!--<th>售价</th>-->
-        <!--<th>楼栋号</th>-->
-        <!--<th>房号</th>-->
-        <!--<th>手机</th>-->
-        <!--<th colspan="2">操作</th>-->
-        <!--<th>数据价格</th>-->
-        <!--<th>上架时间</th>-->
-        <!--<th>区域</th>-->
-        <!--<th>小区</th>-->
-        <!--<th>面积</th>-->
-        <!--<th>售价</th>-->
-        <!--<th>楼栋号</th>-->
-        <!--<th>房号</th>-->
-        <!--<th>手机</th>-->
-        <!--<th colspan="2">操作</th>-->
-    </tr>
-    </thead>
 
-</table>
 <div class="main">
     <div class="main_plus">
         <a href="../personal_center.html?type=addHouseInfo" target="_top">+发布数据&nbsp;&nbsp;&nbsp;</a>
@@ -229,26 +218,55 @@
                     </div>
                 </form>
             </div>
-            <div class="main_R_main" style="margin-left:25px; margin-right: 25px; ">
+            <div class="" style="margin-left:25px; margin-right: 25px; ">
 
-                <div class="main_R_list list_total">
+                <!--<div class="main_R_list list_total">-->
+                <div class=" ">
+                    <table id="houseTable" class="stripe cell-border">
+                        <thead>
+                        <tr>
+                            <th>数据价格</th>
+                            <th>楼栋号</th>
+                            <th>房号</th>
+                            <!--<th>手机</th>-->
+                            <!--<th colspan="2">操作</th>-->
+                            <!--<th>数据价格</th>-->
+                            <!--<th>上架时间</th>-->
+                            <!--<th>区域</th>-->
+                            <!--<th>小区</th>-->
+                            <!--<th>面积</th>-->
+                            <!--<th>售价</th>-->
+                            <!--<th>楼栋号</th>-->
+                            <!--<th>房号</th>-->
+                            <!--<th>手机</th>-->
+                            <!--<th colspan="2">操作</th>-->
+                            <!--<th>数据价格</th>-->
+                            <!--<th>上架时间</th>-->
+                            <!--<th>区域</th>-->
+                            <!--<th>小区</th>-->
+                            <!--<th>面积</th>-->
+                            <!--<th>售价</th>-->
+                            <!--<th>楼栋号</th>-->
+                            <!--<th>房号</th>-->
+                            <!--<th>手机</th>-->
+                            <!--<th colspan="2">操作</th>-->
+                        </tr>
+                        </thead>
 
+                        <tbody></tbody>
+
+                    </table>
                 </div>
             </div>
-            <div id="pager"></div>
-
         </div>
     </div>
-    <div id="fade" class="black_overlay">
     </div>
 </div>
 
-
-
-<div class="" style="width:100%; height:60px;">
-    <iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
-    </iframe>
-</div>
+    <div class="" style="width:100%; height:60px;">
+        <iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+        </iframe>
+    </div>
 </body>
 
 </html>
