--- a/test_dataTables.html
+++ b/test_dataTables.html
@@ -73,7 +73,7 @@
                 return param;
             }
 
-            $('#example').dataTable( {
+            $('#example').DataTable( {
                 searching: false,
                 ordering:  true,
                 "processing": true,
