--- a/collect/my_submit.html
+++ b/collect/my_submit.html
@@ -16,7 +16,7 @@
 <link href="../resources/css/date_css/date.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<iframe   name="header" id="header"  src="../common/head.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
+	<iframe name="header" id="header" src="../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
 	</iframe>
 	<div class="main">
 		<div class="main_plus">
@@ -88,7 +88,7 @@
 			
 		</div>
 	</div>
-	<iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+	<iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
 	</iframe> 
 <script>
     window.setTimeout(function(){
