--- a/custmer_service.html
+++ b/custmer_service.html
@@ -13,14 +13,14 @@
 </head>
 <body>
   <!-- <div> -->
-    <iframe  name="header" id="header" src="common/head.html" style="min-width:1300px;" width="100%" height="55px;" frameborder="0" scrolling="no" >
+    <iframe name="header" id="header" src="common/headOld.html" style="min-width:1300px;" width="100%" height="55px;" frameborder="0" scrolling="no" >
     </iframe>
   <!-- </div> -->
   <div class="container" style=" text-align:center; margin-bottom:60px;">
     <img src="resources/images/customer_service.png" height="600" width="775"  alt="" style="margin:0 auto">
   </div>
   <div class="footer">
-    <iframe src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+    <iframe src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
     </iframe> 
   </div>
 
