--- a/indexOld.html
+++ b/indexOld.html
@@ -20,7 +20,7 @@
 </head>
 <body>
  <div class="" style="min-width:1300px; height:55px;">
-  <iframe id="header" name="header" src="common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no" border="0">
+  <iframe id="header" name="header" src="common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no" border="0">
   </iframe>
  </div>
   <div class="main">
@@ -69,7 +69,7 @@
   
   </div> 
     <div class="footer">
-      <iframe src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+      <iframe src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
       </iframe> 
     </div>
 </body>
