--- a/login.html
+++ b/login.html
@@ -34,15 +34,6 @@
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Cache-Control" content="no-cache" />
 
-<!--<link href="resources/admin/css/common.css" rel="stylesheet" type="text/css" />-->
-<!--<link href="resources/admin/css/login.css" rel="stylesheet" type="text/css" />-->
-<!--<script type="text/javascript" src="resources/admin/js/jquery.js"></script>-->
-<!--<script type="text/javascript" src="resources/admin/js/jsbn.js"></script>-->
-<!--<script type="text/javascript" src="resources/admin/js/prng4.js"></script>-->
-<!--<script type="text/javascript" src="resources/admin/js/rng.js"></script>-->
-<!--<script type="text/javascript" src="resources/admin/js/rsa.js"></script>-->
-<!--<script type="text/javascript" src="resources/admin/js/base64.js"></script>-->
-<!--<script type="text/javascript" src="resources/admin/js/common.js"></script>-->
 
 	<title>我要查房 - 登录</title>
 	<meta http-equiv="expires" content="0" />
@@ -52,26 +43,29 @@
 </head>
 <body>
 
+<iframe name="header" id="header" src="./common/head.html" width="100%;" height="89px" frameborder="0" scrolling="no">
+</iframe>
+
 	<!-- background switcher -->
-	<div class="bg-switch visible-desktop">
-		<div class="bgs">
-			<a href="#" data-img="7.jpg" class="bg ">
-				<img src="resources/detailAdmin/img/bgs/7.jpg" />
-			</a>
-			<a href="#" data-img="8.jpg" class="bg active">
-				<img src="resources/detailAdmin/img/bgs/8.jpg" />
-			</a>
-			<a href="#" data-img="9.jpg" class="bg">
-				<img src="resources/detailAdmin/img/bgs/9.jpg" />
-			</a>
-			<a href="#" data-img="10.jpg" class="bg">
-				<img src="resources/detailAdmin/img/bgs/10.jpg" />
-			</a>
-			<a href="#" data-img="11.jpg" class="bg">
-				<img src="resources/detailAdmin/img/bgs/11.jpg" />
-			</a>
-		</div>
-	</div>
+	<!--<div class="bg-switch visible-desktop">-->
+		<!--<div class="bgs">-->
+			<!--<a href="#" data-img="7.jpg" class="bg ">-->
+				<!--<img src="resources/detailAdmin/img/bgs/7.jpg" />-->
+			<!--</a>-->
+			<!--<a href="#" data-img="8.jpg" class="bg active">-->
+				<!--<img src="resources/detailAdmin/img/bgs/8.jpg" />-->
+			<!--</a>-->
+			<!--<a href="#" data-img="9.jpg" class="bg">-->
+				<!--<img src="resources/detailAdmin/img/bgs/9.jpg" />-->
+			<!--</a>-->
+			<!--<a href="#" data-img="10.jpg" class="bg">-->
+				<!--<img src="resources/detailAdmin/img/bgs/10.jpg" />-->
+			<!--</a>-->
+			<!--<a href="#" data-img="11.jpg" class="bg">-->
+				<!--<img src="resources/detailAdmin/img/bgs/11.jpg" />-->
+			<!--</a>-->
+		<!--</div>-->
+	<!--</div>-->
 
 
 		<div>
@@ -80,10 +74,10 @@
 
 				<div class="row-fluid login-wrapper">
 					<a href="index.html">
-						<img class="logo" src="resources/detailAdmin/img/logo-white.png" />
+						<!--<img class="logo" src="resources/detailAdmin/img/logo-white.png" />-->
 					</a>
 
-					<div class="span4 box">
+					<div class="span4 box" style="margin-top: 60px">
 						<div class="content-wrap">
 							<h6>登录</h6>
 							<input class="span12" type="text" placeholder="请输入用户名" id="username" name="username" maxlength="20" />
