--- a/register.html
+++ b/register.html
@@ -42,7 +42,7 @@
 </style>
 <body>
 <div style="width:100%;height:55px;">
-    <iframe src="common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no">
+    <iframe src="common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no">
     </iframe>
 </div>
 
@@ -82,7 +82,7 @@
 
 
 <div class="footer">
-    <iframe src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+    <iframe src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
     </iframe>
 </div>
 </body>
