--- a/use.html
+++ b/use.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div style="width:100%;height:55px;">
-   <iframe src="common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
+   <iframe src="common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
    </iframe> 
   </div>
   <div class="use_info">
@@ -100,7 +100,7 @@
   </div>
   
  <div class="footer">
-   <iframe src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+   <iframe src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
    </iframe>
  </div>
   <script type="text/javascript">
