--- a/about.html
+++ b/about.html
@@ -23,25 +23,8 @@
 </head>
 
 <body>
-<header id="header">
-  <nav class="navbar navbar-inverse" role="banner">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a> </div>
-      <div class="collapse navbar-collapse navbar-right">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html">主页</a></li>
-          <li class="active"><a href="about.html">联系我们</a></li>
-          <li><a href="services.html">有效房源</a></li>
-          <li><a href="portfolio.html">最新房源</a></li>
-          <li><a href="pricing.html">物业查询</a></li>
-          <li><a href="index.html#personal">个人中心</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+<iframe name="header" id="header" src="./common/head.html" width="100%;" frameborder="0" scrolling="no">
+</iframe>
 <div id="inner-page">
   <div class="top-center">
     <h2>关于我们</h2>
@@ -152,11 +135,6 @@
     </div>
   </div>
 </footer>
-<script src="./resources/tpgd/js/jquery.js"></script>
-<script src="./resources/tpgd/js/bootstrap.min.js"></script>
-<script src="./resources/tpgd/js/jquery.prettyPhoto.js"></script>
-<script src="./resources/tpgd/js/jquery.isotope.min.js"></script>
-<script type="text/javascript" src="js/owl.carousel.js"></script> 
-<script src="./resources/tpgd/js/main.js"></script>
+
 </body>
 </html>
