--- a/aboutOld.html
+++ b/aboutOld.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="header">
-   <iframe src="common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
+   <iframe src="common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
    </iframe> 
   </div>
   <div class="intro_info" style="width:711px;margin:20px auto;">
@@ -32,7 +32,7 @@
   </div>
 
  <div class="footer" style="margin-top:100px;position:relative;">
-   <iframe src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+   <iframe src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
    </iframe>
  </div>
   
