--- a/announcement.html
+++ b/announcement.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- <div> -->
-    <iframe  name="header" id="header" src="common/head.html" style="min-width:1300px;" width="100%" height="55px;" frameborder="0" scrolling="no" >
+    <iframe name="header" id="header" src="common/headOld.html" style="min-width:1300px;" width="100%" height="55px;" frameborder="0" scrolling="no" >
     </iframe>
   <!-- </div> -->
 
@@ -90,7 +90,7 @@
     </div>
   </div>
   <div class="footer">
-    <iframe src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+    <iframe src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
     </iframe> 
   </div>
 
