--- a/app_load.html
+++ b/app_load.html
@@ -27,7 +27,7 @@
 <body>
 
 <div style="width:100%;height:55px;min-width:1300px;">
-    <iframe src="common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no">
+    <iframe src="common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no">
     </iframe>
 </div>
 
