--- a/collect/erji/collect_erji.html
+++ b/collect/erji/collect_erji.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div style="width:100%;height:48px;">
-	<iframe src="../../common/head.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
+	<iframe src="../../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
 	</iframe>
 </div>
 <div class="main">
@@ -96,7 +96,7 @@
 	</table>
 </div>
 <div class="footer">
-	<iframe src="../../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+	<iframe src="../../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
 	</iframe> 
 </div>
 
