--- a/collect/forum.html
+++ b/collect/forum.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div style="min-width:1300px;height:48px;">
-		<iframe src="../common/head.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
+		<iframe src="../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
 		</iframe>
 	</div>
 	<div class="main">
@@ -68,7 +68,7 @@
 	
 	</div>
 <div style="width:100%;height:60px;" class="footer">
-	<iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+	<iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
 	</iframe> 
 </div>
 
