--- a/collect/list.html
+++ b/collect/list.html
@@ -30,7 +30,7 @@
 	</script>
 </head>
 <body>
-	<iframe name="header" id="header" src="../common/head.html"  width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:1300px;">
+	<iframe name="header" id="header" src="../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:1300px;">
 	</iframe>
 	<div class="main">
 		<div class="main_plus">
@@ -216,7 +216,7 @@
 			</div>
 	</div>
 
-	<iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scroling="no">
+	<iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scroling="no">
 	</iframe> 
 <script>
     window.setTimeout(function(){
