--- a/collect/my_release.html
+++ b/collect/my_release.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-<iframe name="header" id="header" src="../common/head.html" width="100%;" height="48px;" frameborder="0" scrolling="no"
+<iframe name="header" id="header" src="../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no"
         style="min-width:720px;">
 </iframe>
 <div class="main">
@@ -123,7 +123,7 @@
 </div>
 
 <div id="fade" class="black_overlay">
-<iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+<iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
 </iframe>
 <script>
     window.setTimeout(function () {
