--- a/collect/submit.html
+++ b/collect/submit.html
@@ -15,7 +15,7 @@
 <link href="../resources/css/date_css/date.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<iframe src="../common/head.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
+	<iframe src="../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:720px;">
 	</iframe>
 	<div class="main">
 		<div class="main_plus">
@@ -96,7 +96,7 @@
 			
 		</div>
 	</div>
-	<iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+	<iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
 	</iframe> 
 </body>
 </html>
