--- a/common/head.html
+++ b/common/head.html
@@ -1,62 +1,56 @@
-<!DOCTYPE html>
-<html>
 
-  <head>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>我要查房</title>
+<meta name="description" content="">
 
-    <base id="basePath" />
-    <script>
-      var basePath = document.getElementById("basePath");
-      basePath.setAttribute("href","http://localhost:63343/yfyk-html/");
-    </script>
-    <title>大公盘</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="resources/css/global.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/clear.css"/>
-    <script src="resources/js/jquery-1.10.1.min.js"></script>
-    <script type="text/javascript" src="resources/js/common.js"></script>
-    <script type="text/javascript" src="resources/js/common/head.js"></script>
-    <style>
-      .nav li{cursor: pointer}
-      .nav li a{display: block;width: 100%;height: 100%;}
-    </style>
+<!-- core CSS -->
+  <link href="../resources/tpgd/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../resources/tpgd/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../resources/tpgd/css/prettyPhoto.css" rel="stylesheet">
+  <link href="../resources/tpgd/css/main.css" rel="stylesheet">
+  <link href="../resources/tpgd/css/responsive.css" rel="stylesheet">
+  <link href="../resources/tpgd/css/owl.carousel.css" rel="stylesheet">
+  <link href="../resources/tpgd/css/owl.theme.css" rel="stylesheet">
 
-  </head>
+<link href="../resources/layer/skin/layer.css" rel="stylesheet">
+<!--<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>-->
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
 
-<body>
+<body class="homepage">
 
-<div class="header" style="min-width: 1300px;">
-  <div class="site_topbar" style="min-width: 1300px;">
-    <div class="logo">
-    <a href="../index.html" target="_top"><img src="resources/images/logo.png"  alt=""></a>
-    </div>
-    <div class="nav"  >
-      <ul>
-        <li><a href="../index.html" target="_top">首页</a></li>
-        <li class="isLogin" href="/personal_center.html">个人中心</li>
-        <li class="isLogin" href="house_valid/list.html">有效房源</li>
-        <li class="isLogin" href="house_new/list.html">最新房源</li>
-        <li class="isLogin" href="house_property/list.html">物业房源</li>
-        <!--<li ><a href="../app_load.html" target="_top">APP下载</a></li>-->
-        <li ><a href="../help.html" target="_top">帮助？</a></li>
-        <li ><a href="../custmer_service.html" target="_top">客服</a> </li>
-        <li ><a href="../announcement.html" target="_top">公告</a> </li>
-      </ul>
-    </div>
-    <div class="headerR">
-      <div class="part1" style="display:none ">
-        <span id="login_btn"><a href="../login.html" target="_top">登录</a></span>
-        <span id="register_btn"><a href="../register.html"  target="_top">注册</a></span>
+<header id="header">
+  <nav class="navbar navbar-inverse" role="banner">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span> <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a>
       </div>
-
-      <div class="part2" style="display:none ">
-        <span id="testId">欢迎您，</span><span class="user"></span>
-        <span class="exit">退出</span>
+      <div class="collapse navbar-collapse navbar-right">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="../index.html" target="_top">主页</a></li>
+          <li><a href="../about.html" target="_top">联系我们</a></li>
+          <li><a href="../house_info/list-table.html" target="_top">有效房源</a></li>
+          <li><a href="../portfolio.html" target="_top">最新房源</a></li>
+          <li><a href="../pricing.html" target="_top">物业查询</a></li>
+          <li><a href="../index.html#personal" target="_top">个人中心</a></li>
+          <li><a href="login.html">登录/注册</a></li>
+        </ul>
       </div>
     </div>
-  </div>  
-</div>
-
-
+  </nav>
+</header>
 
 </body>
 </html>
