--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div style="min-width:1300px;height:55px;">
-   <iframe name="header"id="header"src="common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
+   <iframe name="header" id="header" src="common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
    </iframe>
    </div>
   <div class="container mt10" style="min-width: 1300px;">
@@ -89,7 +89,7 @@
     </div>
   </div>
   <div class="footer">
-   <iframe src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+   <iframe src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
    </iframe>
   </div>
   <script type="text/javascript">
