--- a/house_info/list-table.html
+++ b/house_info/list-table.html
@@ -82,7 +82,7 @@
 
             var table = $('#houseTable').DataTable( {
                 language: {
-                    url: '/resources/dataTables/Chinese.json'
+                    url: '../resources/dataTables/Chinese.json'
                 },
                 colReorder: true,
                 fixedHeader: true,
@@ -91,10 +91,10 @@
                 "processing": true,
                 "serverSide": true,
                 "paging": true,
-                "aLengthMenu": [[25, 50, -1], [ 25, 50, "显示所有"]], //这个是允许用户自定义每页数量的时候,下拉菜单的选项
+                "aLengthMenu": [[15, 50, -1], [ 15, 50, "显示所有"]], //这个是允许用户自定义每页数量的时候,下拉菜单的选项
                 "bPaginate" : true,      //显示分页器
                 "bLengthChange": false, // 用户不可改变每页显示数量
-                "iDisplayLength":25,   //一页显示条数
+                "iDisplayLength":15,   //一页显示条数
                 "ajax" : {
                     data : function(data) {
                         return getQueryCondition(data)
@@ -120,12 +120,6 @@
                         orderable : false,
 //                        width : "120px",
                         defaultContent:""
-                    },
-                    {
-                        "className":      'details-control',
-                        "orderable":      false,
-                        "data":           null,
-                        "defaultContent": ''
                     }
                 ],
                 "createdRow": function ( row, data, index ) {
@@ -179,7 +173,8 @@
 </head>
 <body>
 
-
+<iframe name="header" id="header" src="../common/head.html" width="100%;" frameborder="0" scrolling="no">
+</iframe>
 <div class="main">
 
     <div class="main_R">
@@ -271,7 +266,6 @@
                             <th>楼栋号</th>
                             <th>房号</th>
                             <th>操作</th>
-                            <th></th>
                         </tr>
                         </thead>
                         <tbody></tbody>
@@ -284,7 +278,7 @@
 </div>
 
     <div class="" style="width:100%; height:60px;">
-        <iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+        <iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
         </iframe>
     </div>
 </body>
