--- a/house_info/my_query.html
+++ b/house_info/my_query.html
@@ -19,7 +19,7 @@
     <link href="../resources/css/date_css/date.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<iframe name="header" id="header" src="../common/head.html" width="100%;" height="48px;" frameborder="0" scrolling="no"
+<iframe name="header" id="header" src="../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no"
         style="min-width:720px;">
 </iframe>
 <div class="main">
@@ -251,7 +251,7 @@
     </div>
 </div>
 <div class="" style="width:100%; height:60px;">
-    <iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+    <iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
     </iframe>
 </div>
 </body>
