--- a/house_valid/list.html
+++ b/house_valid/list.html
@@ -77,7 +77,7 @@
     </script>
 </head>
 <body>
-<iframe name="header" id="header" src="../common/head.html" width="100%;" height="48px;" frameborder="0" scrolling="no"
+<iframe name="header" id="header" src="../common/headOld.html" width="100%;" height="48px;" frameborder="0" scrolling="no"
         style="min-width:1300px;">
 </iframe>
 <div class="main">
@@ -383,7 +383,7 @@
 </div>
 
 <div class="" style="width:100%; height:60px;">
-    <iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+    <iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
     </iframe>
 </div>
 </body>
