--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
         <a class="navbar-brand" href="index.html"><i class="fa fa-sun-o"></i> 我要查房</a></div>
       <div class="collapse navbar-collapse navbar-right">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">主页</a></li>
-          <li class="active"><a href="about.html">联系我们</a></li>
-          <li><a href="services.html">有效房源</a></li>
+          <li class="active"><a href="index.html">主页</a></li>
+          <li ><a href="about.html">联系我们</a></li>
+          <li><a href="house_info/list-table.html">有效房源</a></li>
           <li><a href="portfolio.html">最新房源</a></li>
           <li><a href="pricing.html">物业查询</a></li>
           <li><a href="#personal">个人中心</a></li>
+          <li><a href="login.html">登录/注册</a></li>
         </ul>
       </div>
     </div>
@@ -58,7 +59,7 @@
         <div class="col-md-12 text-center">
           <h2>Welcome to <span class="logo">我要查房</span></h2>
           <h3>Your Creative Business Partner</h3>
-          <p><a href="about.html" class="slider btn">登录</a> </p>
+          <p><a href="login.html" class="slider btn">登录</a> </p>
         </div>
       </div>
     </div>
