--- a/password/forget.html
+++ b/password/forget.html
@@ -18,7 +18,7 @@
 </head>
   <body>
     <div  style="width:100%;height:55px;">
-     <iframe src="../common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no">
+     <iframe src="../common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no">
      </iframe>
     </div>
 
@@ -52,7 +52,7 @@
 
 
     <div class="footer" >
-  <iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+  <iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
   </iframe> 
 </div>  
 </body>
