--- a/password/reset.html
+++ b/password/reset.html
@@ -18,7 +18,7 @@
 <body>
 
     <div  style="width:100%;height:55px;">
-     <iframe src="../common/head.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
+     <iframe src="../common/headOld.html" width="100%" height="55px;" frameborder="0" scrolling="no" >
      </iframe>
     </div>
     <div class="main">
@@ -43,7 +43,7 @@
       </div>
     </div>  
 <div class="footer" >
-   <iframe src="../common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
+   <iframe src="../common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no">
    </iframe> 
 </div>  
 </body>
