--- a/personal_center.html
+++ b/personal_center.html
@@ -19,11 +19,11 @@
     </script>
 </head>
 <body>
-<iframe src="common/head.html" id="header" name="header" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:1280px;" >
+<iframe src="common/headOld.html" id="header" name="header" width="100%;" height="48px;" frameborder="0" scrolling="no" style="min-width:1280px;" >
 </iframe>
 <iframe name="center"  id="center" src="common/center.html" width="100%;" height="940px;" frameborder="0" scrolling="no" style="min-width:1280px;" >
 </iframe>
-<iframe name="foot"  id="foot" src="common/foot.html" width="100%;" height="60px;" frameborder="0" scrolling="no" style="min-width:1280px;">
+<iframe name="foot" id="foot" src="common/footOld.html" width="100%;" height="60px;" frameborder="0" scrolling="no" style="min-width:1280px;">
 </iframe> 
 </body>
 <script>
